<resources>
    <string name="app_name">AndroidTestDemo</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test_tab_layout">滑动Tab</string>

    <string name="menu_refresh">Refresh</string>

    <string name="menu_color_scheme">Color scheme</string>
    <string name="menu_color_scheme_1">Scheme #1</string>
    <string name="menu_color_scheme_2">Scheme #2</string>
    <string name="menu_color_scheme_3">Scheme #3</string>

    <string name="sample_show_log">Show Log</string>
    <string name="sample_hide_log">Hide Log</string>
    <string name="title_activity_main_activity_g1">MainActivityG1</string>
    <string name="title_activity_rx_java_demo">RxJavaDemo</string>
    <string name="title_activity_main4">Main4Activity</string>
    <string name="title_activity_main5">Main5Activity</string>
    <string name="title_activity_data_binding_demo">DataBindingDemo</string>

    <string name="search">搜索</string>
    <string name="input_hint">请输入tag</string>
    <string name="input_prefill"></string>
    <string name="default_search_tag">科幻</string>
    <string name="title_activity_snow_all">SnowAllActivity</string>
    <string name="title_activity_web_service_demo">WebServiceDemo</string>
    <string name="title_activity_recyle_view_demo">RecyleViewDemo</string>
    <string name="title_activity_main6">Main6Activity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main7">Main7Activity</string>
</resources>
